--- a/ejercicios_profundizacion/index.html
+++ b/ejercicios_profundizacion/index.html
@@ -13,7 +13,9 @@
     <h1>Ejercicios de profundización</h1>
 
     <!-- Ir agregando los enlaces a los ejercicios a medida que los van realizando -->
-    <!-- <script ... -->
+    
+    <script src="js/profundizacion_1.js"></script>
+    <!-- <script src="js/profundizacion_2.js"></script> -->
 </body>
 
 </html>
