--- a/ejercicios_profundizacion/index.html
+++ b/ejercicios_profundizacion/index.html
@@ -12,10 +12,51 @@
     <img src="images/inove.jpg" height="275px" alt="inovelogo"/>
     <h1>Ejercicios de profundización</h1>
 
+
+
+    <h2>Profundizacion 1</h2>
+    <!-- Formulario del ejercicio 1 -->
+    <form onsubmit="promedio(event)">
+        <label for="num1">1° Numero:</label>
+        <input type="int" id="num1" name="num1" required>
+        <br>
+
+        <label for="num2">2° Numero:</label>
+        <input type="int" id="num2" name="num2" required>
+        <br>
+
+        <label for="num3">3° Numero:</label>
+        <input type="int" id="num3" name="num3" required>
+        <br>
+
+        <label for="num4">4° Numero:</label>
+        <input type="int" id="num4" name="num4" required>
+        <br>
+
+        <label for="num5">5° Numero:</label>
+        <input type="int" id="num5" name="num5" required>
+        <br>
+
+        <input type="submit" value="Enviar">
+    </form>
+
+
+
+    <h2>Profundizacion 2</h2>
+    <!-- Formulario del ejercicio 2 -->
+    <form onsubmit="generarInvitados(event)">
+        <label for="cantidadInvitados">Cuantos invitados desea ingresar?</label>
+        <input type="int" id="cantidadInvitados" name="cantidad" required>
+        <br>
+
+        <input type="submit" value="Enviar">
+    </form>
+
+
+
     <!-- Ir agregando los enlaces a los ejercicios a medida que los van realizando -->
-    
-    <script src="js/profundizacion_1.js"></script>
-    <!-- <script src="js/profundizacion_2.js"></script> -->
+    <script type="text/javascript" src="js/profundizacion_1.js"></script>
+    <script type="text/javascript" src="js/profundizacion_2.js"></script>
 </body>
 
 </html>
